# fuse-augmentations

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  index.html  llms.txt  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/perf_baseline/: ci_baseline_score.json
.github/scripts/: check_doctest_fences.py  ci_perf_gate_compare.py  generate_doc_tests.py
.github/workflows/: ci_perf-gate.yml  ci_pkg-install.yml  ci_testing.yml  docs.yml  lint-check.yml
applications/: index.html
concepts/capabilities/: index.html
concepts/how-fusion-works/: index.html
docs/: applications.md  faq.md  index.md  known-limitations.md  robots.txt
docs/assets/stylesheets/: extra.css
docs/concepts/: capabilities.md  how-fusion-works.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: auxiliary-targets.md  backend-pipelines.md  configuration.md  introspection.md  reproducibility.md
docs/reference/: advanced.md  configuration.md  core.md  types-and-targets.md
docs/research/: benchmarks.md  methodology.md  quality-and-fidelity.md
examples/: bench_augmentation_pipelines.py  bench_primitive_vs_affine.py  visualize_resampling_loss.py
experiments/: README.md  bench_augmentation_pipelines.py  bench_gpu_batch.py  bench_memory.py  bench_primitive_vs_affine.py  optimize_score.py  program.md
faq/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guides/auxiliary-targets/: index.html
guides/backend-pipelines/: index.html
guides/configuration/: index.html
guides/introspection/: index.html
guides/reproducibility/: index.html
javascripts/: pycon_copy.js
known-limitations/: index.html
overrides/: main.html
reference/advanced/: index.html
reference/configuration/: index.html
reference/core/: index.html
reference/types-and-targets/: index.html
research/benchmarks/: index.html
research/methodology/: index.html
research/quality-and-fidelity/: index.html
scripts/: min_deps.py
search/: search_index.json
src/fuse_aug/: __init__.py
src/fuse_augmentations/: __about__.py  __init__.py  _backend.py  _compat.py  _compose.py  _converters.py  _interpolation.py  _matrix.py  _np_matrix.py  _np_segment.py  _resolver.py  _segment.py  _targets.py  _types.py  compose.py  config_validation.py  converters.py  factories.py  introspection.py  pipeline.py  planner.py  resolver.py  substitution.py  targets.py  types.py  utils.py
src/fuse_augmentations/adapters/: __init__.py  _albumentations.py  _kornia.py  _torchvision.py  albumentations.py  kornia.py  torchvision.py
src/fuse_augmentations/affine/: __init__.py  _matrix.py  _segment.py  matrix.py  segment.py
tests/: conftest.py  test_albu_native_io.py  test_backend_converter.py  test_clip_policy.py  test_color_parity.py  test_converters.py  test_cross_backend_integration.py  test_d4.py  test_limitations.py  test_normalize_fusion.py  test_output_backend.py  test_utils.py
tests/adapters/: test_albu_coverage.py  test_color_matrix_correctness.py  test_kornia_coverage.py  test_torchvision_coverage.py
tests/integration/: conftest.py  test_compose_integration.py  test_kornia_adapter.py  test_segment_parity.py
tests/property/: conftest.py  test_matrix_properties.py
tests/test_integration/: __init__.py  conftest.py  test_albu_adapter.py  test_albu_aux.py  test_albu_execution.py  test_albu_native_io.py  test_antialias.py  test_auxiliary_targets.py  test_blur_fusion.py  test_border_mode.py  test_compile.py  test_compose.py  test_compose_integration.py  test_crop_fusion.py  test_cross_backend.py  test_dataloader_stress.py  test_inverse.py  test_kornia_adapter.py  test_low_precision.py  test_lut_fusion.py  test_mask_interpolation.py  test_matrix_accumulation.py  test_matrix_api.py  test_mixed_backend.py  test_mps_parity.py  test_native_backend.py  test_output_backend.py  test_passthrough.py  test_precision.py  test_projective_parity.py  test_segment_parity.py
tests/test_integration/adapters/: test_albument.py  test_kornia.py  test_torchvision.py
tests/test_property/: __init__.py  test_matrix.py  test_matrix_properties.py
tests/test_unit/: __init__.py  conftest.py  test_albu_adapter_unit.py  test_albu_classification.py  test_backend_converter.py  test_classification.py  test_color_fusion.py  test_color_matrix_parity.py  test_compat_flags.py  test_compose.py  test_crop_resize_fusion.py  test_data_keys.py  test_exact_affine_segment_rename.py  test_from_config.py  test_from_params.py  test_from_params_specs.py  test_fusion_plan_descriptors.py  test_fusion_plan_marker.py  test_interpolation_resolution.py  test_matrix_primitives.py  test_meta_config_demo.py  test_np_matrix.py  test_perspective_keepsize.py  test_phase_c_demo.py  test_phase_e_demo.py  test_pointwise_linear.py  test_registry.py  test_reorder_aggressive.py  test_reordering.py  test_resolver.py  test_segment.py  test_segment_descriptor.py  test_setstate_reinit.py  test_split_reason.py  test_targets.py  test_torchvision_adapter_unit.py  test_torchvision_classification.py  test_transform_spec.py  test_types.py  test_uint8_cross_backend_parity.py
tests/test_unit/adapters/: test_albu_adapter_unit.py  test_albu_classification.py  test_albu_coverage.py  test_albu_exact_multiop.py  test_albu_quarter_turn_direction.py  test_backend_converter.py  test_backend_internals_smoke.py  test_backend_mro_agreement.py  test_color_matrix_correctness.py  test_converters.py  test_kornia_batch_sentinel.py  test_kornia_coverage.py  test_kornia_subclass_category.py  test_torchvision_adapter_unit.py  test_torchvision_classification.py  test_torchvision_coverage.py  test_tv_np_b1_fastpath.py
tests/test_unit/affine/: test_matrix.py  (+8 more)
tests/unit/: conftest.py  test_classification.py  test_compose.py  test_interpolation_resolution.py  test_matrix_primitives.py  test_segment.py  test_types.py
(+17 files in other folders)
