[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=61",
  "wheel",
]

[project]
name = "fuse-augmentations"
description = "Fuse augmentation transforms into a single interpolation pass."
readme = "README.md"
license = "Apache-2.0"
license-files = [ "LICENSE" ]
authors = [
  { name = "Jiri Borovec", email = "6035284+Borda@users.noreply.github.com" },
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Image Recognition",
]
dynamic = [ "version" ]
dependencies = [
  "numpy",
  "pillow",
  "scipy>=1.10",
  "torch>=2.2",
]
optional-dependencies.albumentations = [
  "albumentations>=2.0.0",
]
optional-dependencies.all = [
  "albumentations>=2.0.0",
  "kornia>=0.6.12",
  "torchvision>=0.15",
]
optional-dependencies.kornia = [
  "kornia>=0.6.12",
]
optional-dependencies.torchvision = [
  "torchvision>=0.15",
]
urls."Source Code" = "https://github.com/Borda/fuse-augmentations"

[dependency-groups]
dev = [
  "hypothesis>=6.100",
  "mypy==1.19.1",
  "pytest>=8.3,<8.5",
  "pytest-benchmark>=4",
  "pytest-cov>=6.2,<7.1",
  "pytest-doctestplus>=1.3",
  # "tomlkit>=0.13",
  "twine>=6.1,<6.3",
]
benchmark = [
  "ipython>=8.0",
  "jupyterlab>=4.0",
  "matplotlib>=3.7",
  "pandas>=2.0",
  "rich>=13.0",
  "tqdm>=4.60",
]

[tool.setuptools]
dynamic.version.attr = "fuse_augmentations.__about__.__version__"
packages.find.where = [ "src" ]
packages.find.include = [ "fuse_augmentations*", "fuse_aug*" ]

[tool.ruff]
target-version = "py310"
line-length = 120
# [tool.ruff.pycodestyle]
# ignore-overlong-task-comments = true
format.preview = true
lint.select = [
  "D",  # see: https://pypi.org/project/pydocstyle
  "E",
  "F",  # see: https://pypi.org/project/pyflakes
  "I",  # see: https://pypi.org/project/isort/
  "N",  # see: https://pypi.org/project/pep8-naming
  "S",  # see: https://pypi.org/project/flake8-bandit
  "UP", # see: https://docs.astral.sh/ruff/rules/#pyupgrade-up
  "W",  # see: https://pypi.org/project/pycodestyle
]
lint.extend-select = [
  "A",    # see: https://pypi.org/project/flake8-builtins
  "ANN",  # see: https://pypi.org/project/flake8-annotations
  "B",    # see: https://pypi.org/project/flake8-bugbear
  "C4",   # see: https://pypi.org/project/flake8-comprehensions
  "EXE",  # see: https://pypi.org/project/flake8-executable
  "ISC",  # see: https://pypi.org/project/flake8-implicit-str-concat
  "PERF", # see: https://pypi.org/project/perflint/
  "PIE",  # see: https://pypi.org/project/flake8-pie
  "PLE",  # see: https://pypi.org/project/pylint/
  "PT",   # see: https://pypi.org/project/flake8-pytest-style
  "PYI",  # see: https://pypi.org/project/flake8-pyi/
  "Q",    # see: https://pypi.org/project/flake8-quotes
  "RET",  # see: https://pypi.org/project/flake8-return
  "RUF",  # Ruff-specific rules
  "SIM",  # see: https://pypi.org/project/flake8-simplify
  "T10",  # see: https://pypi.org/project/flake8-debugger
  "TID",  # see: https://pypi.org/project/flake8-tidy-imports/
  "YTT",  # see: https://pypi.org/project/flake8-2020
]
lint.ignore = [
  "E731", # Do not assign a lambda expression, use a def
]
lint.per-file-ignores."examples/**/*.py" = [
  "ANN", # type annotations not required in example scripts
  "D",   # module docstring covers the script; per-function docs not required
  "N",   # relaxed naming (N, X, C, etc. are idiomatic in image/math code)
  "S",   # security rules relaxed for local example scripts
]
lint.per-file-ignores."experiments/**/*.py" = [
  "ANN", # type annotations not required in experiment scripts
  "D",   # module docstring covers the script; per-function docs not required
  "N",   # relaxed naming (N, X, C, etc. are idiomatic in image/math code)
  "S",   # security rules relaxed for local experiment scripts
]
lint.per-file-ignores."src/fuse_aug/__init__.py" = [
  "F401", # Star-import re-exports are intentional
]
lint.per-file-ignores."tests/**/*.py" = [
  "ANN",   # No type annotations required in tests
  "D",     # No docstrings required in tests
  "E741",  # Ambiguous variable name (I for identity matrix)
  "N",     # Naming conventions relaxed in tests (H, W, M, etc.)
  "PT006", # parametrize argument style is relaxed
  "S101",  # Use of `assert` detected
]
# Unlike Flake8, default to a complexity level of 10.
lint.mccabe.max-complexity = 10
# Use Google-style docstrings.
lint.pydocstyle.convention = "google"

[tool.codespell]
# skip = '*.py'
quiet-level = 3

[tool.docformatter]
recursive = true
# some docstring start with r"""
wrap-summaries = 119
wrap-descriptions = 120
blank = true

[tool.pyproject-fmt]
# Keep full version numbers (e.g., 1.0.0 instead of 1.0) in dependency specifiers
keep_full_version = true

[tool.mypy]
python_version = "3.10"
files = [ "src/fuse_augmentations" ]
exclude = [ "^tests/" ]
strict = true
ignore_missing_imports = true
warn_unused_configs = true

[tool.pytest]
ini_options.norecursedirs = [
  ".git",
  ".github",
  ".claude",
  "dist",
  "build",
  "docs",
  "scripts",
]
ini_options.testpaths = [ "tests", "src" ]
ini_options.addopts = [
  "--strict-markers",
  "--doctest-plus",
  "--color=yes",
  "--capture=sys",
]
ini_options.markers = [
  "slow: marks tests as slow (deselect with '-m not slow')",
  "integration: requires kornia or another external backend",
  "gpu: requires a CUDA-capable GPU",
  "compile: tests torch.compile behaviour",
]
ini_options.filterwarnings = [
  "error::FutureWarning",
]
ini_options.xfail_strict = true
ini_options.junit_duration_report = "call"

[tool.coverage]
report.exclude_lines = [
  "pass",
  "pragma: no cover",
]
