[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=61",
  "wheel",
]

[project]
name = "fuse-augmentations"
description = "Fuse augmentation transforms into a single interpolation pass."
readme = "README.md"
license = "Apache-2.0"
license-files = [ "LICENSE" ]
authors = [
  { name = "Jiri Borovec", email = "6035284+Borda@users.noreply.github.com" },
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Image Recognition",
]
dynamic = [ "version" ]
dependencies = [
  "numpy",
  "pillow",
  "rich>=13.0",
  "scipy>=1.10",
  "torch>=2.2",
]
optional-dependencies.albumentations = [
  "albumentations>=2.0.0",
]
optional-dependencies.all = [
  "albumentations>=2.0.0",
  "kornia>=0.6.12",
  "torchvision>=0.15",
]
optional-dependencies.kornia = [
  "kornia>=0.6.12",
]
optional-dependencies.torchvision = [
  "torchvision>=0.15",
]
urls."Source Code" = "https://github.com/Borda/fuse-augmentations"
urls.Changelog = "https://github.com/Borda/fuse-augmentations/blob/main/CHANGELOG.md"
urls.Homepage = "https://github.com/Borda/fuse-augmentations"
urls.Issues = "https://github.com/Borda/fuse-augmentations/issues"

# Experimental third-party adapter extension point (see fuse_augmentations._backend.register_adapter).
# Downstream packages expose an adapter by declaring, in THEIR pyproject.toml:
#   [project.entry-points."fuse_augmentations.adapters"]
#   my_adapter = "my_pkg.module:register"   # a zero-arg callable that calls register_adapter(...)
# Entries are loaded LAZILY on the first backend-detection miss, never at package import.
# The three built-in adapters self-register at import and are intentionally NOT listed here,
# so this project declares no entries of its own (an empty group is dropped by pyproject-fmt).
[dependency-groups]
dev = [
  "hypothesis>=6.100",
  "matplotlib>=3.7",
  "mypy==1.19.1",
  "pandas>=2.0",
  "pytest>=8.3,<8.5",
  "pytest-benchmark>=4",
  "pytest-cov>=6.2,<7.1",
  "pytest-doctestplus>=1.3",
  "setuptools>=61",
  # "tomlkit>=0.13",
  "twine>=6.1,<6.3",
]
docs = [
  "mkdocs-material>=9.6,<10",
  "mkdocstrings[python]>=0.29",
]
benchmark = [
  "ipython>=8.0",
  "jupyterlab>=4.0",
  "matplotlib>=3.7",
  "pandas>=2.0",
  "rich>=13.0",
  "scikit-image>=0.22",
  "tqdm>=4.60",
]

[tool.setuptools]
dynamic.version.attr = "fuse_augmentations.__about__.__version__"
packages.find.where = [ "src" ]
packages.find.include = [ "fuse_augmentations*", "fuse_aug*" ]

[tool.ruff]
target-version = "py310"
line-length = 120
# [tool.ruff.pycodestyle]
# ignore-overlong-task-comments = true
format.preview = true
lint.select = [
  "D",  # see: https://pypi.org/project/pydocstyle
  "E",
  "F",  # see: https://pypi.org/project/pyflakes
  "I",  # see: https://pypi.org/project/isort/
  "N",  # see: https://pypi.org/project/pep8-naming
  "S",  # see: https://pypi.org/project/flake8-bandit
  "UP", # see: https://docs.astral.sh/ruff/rules/#pyupgrade-up
  "W",  # see: https://pypi.org/project/pycodestyle
]
lint.extend-select = [
  "A",    # see: https://pypi.org/project/flake8-builtins
  "ANN",  # see: https://pypi.org/project/flake8-annotations
  "B",    # see: https://pypi.org/project/flake8-bugbear
  "C4",   # see: https://pypi.org/project/flake8-comprehensions
  "EXE",  # see: https://pypi.org/project/flake8-executable
  "ISC",  # see: https://pypi.org/project/flake8-implicit-str-concat
  "PERF", # see: https://pypi.org/project/perflint/
  "PIE",  # see: https://pypi.org/project/flake8-pie
  "PLE",  # see: https://pypi.org/project/pylint/
  "PT",   # see: https://pypi.org/project/flake8-pytest-style
  "PYI",  # see: https://pypi.org/project/flake8-pyi/
  "Q",    # see: https://pypi.org/project/flake8-quotes
  "RET",  # see: https://pypi.org/project/flake8-return
  "RUF",  # Ruff-specific rules
  "SIM",  # see: https://pypi.org/project/flake8-simplify
  "T10",  # see: https://pypi.org/project/flake8-debugger
  "TID",  # see: https://pypi.org/project/flake8-tidy-imports/
  "YTT",  # see: https://pypi.org/project/flake8-2020
]
lint.ignore = [
  "E731", # Do not assign a lambda expression, use a def
]
lint.per-file-ignores."examples/**/*.py" = [
  "ANN", # type annotations not required in example scripts
  "D",   # module docstring covers the script; per-function docs not required
  "N",   # relaxed naming (N, X, C, etc. are idiomatic in image/math code)
  "S",   # security rules relaxed for local example scripts
]
lint.per-file-ignores."experiments/**/*.py" = [
  "ANN", # type annotations not required in experiment scripts
  "D",   # module docstring covers the script; per-function docs not required
  "N",   # relaxed naming (N, X, C, etc. are idiomatic in image/math code)
  "S",   # security rules relaxed for local experiment scripts
]
lint.per-file-ignores."src/fuse_aug/__init__.py" = [
  "F401", # Star-import re-exports are intentional
]
lint.per-file-ignores."tests/**/*.py" = [
  "ANN",   # No type annotations required in tests
  "D",     # No docstrings required in tests
  "E741",  # Ambiguous variable name (I for identity matrix)
  "N",     # Naming conventions relaxed in tests (H, W, B, etc.)
  "PT006", # parametrize argument style is relaxed
  "S101",  # Use of `assert` detected
]
# Unlike Flake8, default to a complexity level of 10.
lint.mccabe.max-complexity = 10
# Use Google-style docstrings.
lint.pydocstyle.convention = "google"

[tool.codespell]
# skip = '*.py'
quiet-level = 3

[tool.docformatter]
recursive = true
# some docstring start with r"""
wrap-summaries = 119
wrap-descriptions = 120
blank = true

[tool.pyproject-fmt]
# Keep full version numbers (e.g., 1.0.0 instead of 1.0) in dependency specifiers
keep_full_version = true

[tool.mypy]
python_version = "3.10"
files = [ "src/fuse_augmentations" ]
exclude = [ "^tests/" ]
strict = true
ignore_missing_imports = true
warn_unused_configs = true

[tool.pytest]
ini_options.norecursedirs = [
  ".git",
  ".github",
  ".claude",
  "dist",
  "build",
  "docs",
  "scripts",
  "experiments",
]
ini_options.testpaths = [ "tests", "src" ]
ini_options.addopts = [
  "--strict-markers",
  "--doctest-plus",
  "--color=yes",
  "--capture=sys",
]
ini_options.markers = [
  "slow: marks tests as slow (deselect with '-m not slow')",
  "integration: requires kornia or another external backend",
  "gpu: requires a CUDA-capable GPU",
  "compile: tests torch.compile behaviour",
]
ini_options.filterwarnings = [
  "error::FutureWarning",
]
ini_options.xfail_strict = true
ini_options.junit_duration_report = "call"

[tool.coverage]
report.exclude_lines = [
  "pass",
  "pragma: no cover",
]
